@@ -1,9 +1,14 @@
+2003-10-17  Geoff Davis <geoff@geoffdavis.net> (plonista)
+
+   * Added documentation into ZMI tab
+
+   * Moved documentation text on ZMI forms to reduce need to scroll
+
 2003-10-15  Geoff Davis <geoff@geoffdavis.net> (plonista)
 
    * Fixed metadata type for Controller Validators
 
    * Added validators and UI for validators to python scripts
-
 
 2003-10-08  Geoff Davis <geoff@geoffdavis.net> (plonista)
 
